--- a/front/html/listarLigante.html
+++ b/front/html/listarLigante.html
@@ -1,41 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ListarLigante</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-    <div style="margin: 4rem;">
-        <div class="grid gap-3">
+  <body>
+    <div style="margin: 4rem">
+      <div class="grid gap-3">
+        <div class="d-flex justify-content-between mb-3" style="height: 200px">
+          <div
+            class="d-flex align-items-start flex-column"
+            style="margin-right: 20px"
+          >
+            <h1 id="welcome" class="display-3 p-2">Ligantes Cadastrados</h1>
+          </div>
 
-            <div class="d-flex justify-content-between mb-3" style="height: 200px;">
-                <div class="d-flex align-items-start flex-column" style="margin-right: 20px;">
-                    <h1 id="welcome" class="display-3  p-2">Ligantes Cadastrados</h1>
-                </div>
-
-                <div id="voltar" class="d-flex align-items-end flex-column mt-3 mr-3">
-                    <button type="button" class="btn btn-secondary ml-auto">voltar</button>
-                </div>
-            </div>
-
-            <div id="tablePlaceholder">
-            </div>
+          <div id="voltar" class="d-flex align-items-end flex-column mt-3 mr-3">
+            <button type="button" class="btn btn-secondary ml-auto">
+              voltar
+            </button>
+          </div>
         </div>
-    </div>
-</body>
 
+        <div id="tablePlaceholder"></div>
+
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="staticBackdrop"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          aria-labelledby="staticBackdropLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                  Tem Certeza?
+                </h1>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">Essa ação não poderá ser revertida.</div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancelar
+                </button>
+                <button id="deletarModal"type="button" class="btn btn-danger">
+                  Deletar mesmo assim
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+  crossorigin="anonymous"
+></script>
 
 <script src="../javascript/listarLigante.js"></script>
