TODO tratativa duplicidade + edicao

--- a/front/html/cadastroLigante.html
+++ b/front/html/cadastroLigante.html
@@ -23,7 +23,7 @@
 
 
       <div>
-        <div id="successPlaceholder"></div>
+        <div id="placeholder"></div>
         <div class="input-group mb-3">
           <span class="input-group-text">Nome</span>
           <input id="nome" type="text" class="form-control" placeholder="Nome">
