--- a/front/html/novoEvento.html
+++ b/front/html/novoEvento.html
@@ -53,7 +53,7 @@
             </div>
         
             <div class="modal-body">
-                <div class="d-flex justify-content-center">]
+                <div class="d-flex justify-content-center">
                     <img id="qrCode" src="">
                 </div>
             </div>
