--- a/front/html/novoEvento.html
+++ b/front/html/novoEvento.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-              <button id="deletarModal" type="button" class="btn btn-danger">
+              <button id="fecharModal" type="button" class=" btn btn-danger">
                 Fechar 
               </button>
             </div>
