--- a/front/html/user.html
+++ b/front/html/user.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id=""></div>
-    <div class="d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
+    <div id="formBlock" class="d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
 
       <label for="exampleFormControlInput1" class="form-label">nome.sobrenome</label>
 
