--- a/front/html/listarEvento.html
+++ b/front/html/listarEvento.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ListarLigante</title>
+  <title>ListarEventos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
@@ -14,7 +14,7 @@
     <div class="grid gap-3">
       <div class="d-flex justify-content-between mb-3" style="height: 200px">
         <div class="d-flex align-items-start flex-column" style="margin-right: 20px">
-          <h1 id="welcome" class="display-3 p-2">Ligantes Cadastrados</h1>
+          <h1 id="welcome" class="display-3 p-2">Eventos Cadastrados</h1>
         </div>
 
         <div id="voltar" class="d-flex align-items-end flex-column mt-3 mr-3">
