--- a/front/html/listarLigante.html
+++ b/front/html/listarLigante.html
@@ -19,7 +19,7 @@
 
         <div id="voltar" class="d-flex align-items-end flex-column mt-3 mr-3">
           <button type="button" class="btn btn-secondary ml-auto">
-            voltar
+            Voltar
           </button>
         </div>
       </div>
@@ -100,4 +100,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
   integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
-<script src="../javascript/listarEventos.js"></script>
+<script src="../javascript/listarLigante.js"></script>
