tentando listar participantes

--- a/front/html/listarEventos.html
+++ b/front/html/listarEventos.html
@@ -26,6 +26,22 @@
 
       <div id="tablePlaceholder"></div>
 
+      <!-- Modal Confirmar Delecao -->
+      <div class="modal fade" id="modalParticipantes" data-bs-dismiss="modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                Participantes
+              </h1>
+              <button id="fecharModal" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body"><ul id="listParticipantes" class="list-group"></ul></div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </body>
